tests/new_reordering/new_reordering.exp
Error -------------------------------------------------------------------------------------------------------- a.js:14:1

Cannot compute a type for function because its definition includes references to itself [1]. Please add an annotation to
this definition [2] [recursive-definition]

   a.js:14:1
   14| function f_na() {
       ^^^^^^^^^^^^^^^

References:
   a.js:18:10
   18|   return f_na();
                ^^^^ [1]
   a.js:14:16
   14| function f_na() {
                       [2]


Error -------------------------------------------------------------------------------------------------------- a.js:27:1

Cannot compute a type for `x` because its definition includes references to itself [1]. Please add an annotation to this
definition [2] [recursive-definition]

   a.js:27:1
   27| x = x;
       ^

References:
   a.js:27:5
   27| x = x;
           ^ [1]
   a.js:25:5
   25| var x;
           ^ [2]


Error -------------------------------------------------------------------------------------------------------- a.js:29:1

The following definitions recursively depend on each other, and Flow cannot compute their types:
 - function [1] depends on other definition [2]
 - function [3] depends on other definition [4]
Please add type annotations to these definitions [5] [6] [definition-cycle]

   a.js:29:1
   29| function odd(x: number) {
       ^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   a.js:33:10
   33|   return even(x - 1)
                ^^^^ [2]
   a.js:36:1
   36| function even(x: number) {
       ^^^^^^^^^^^^^^^^^^^^^^^^ [3]
   a.js:40:10
   40|   return odd(x - 1)
                ^^^ [4]
   a.js:29:24
   29| function odd(x: number) {
                               [5]
   a.js:36:25
   36| function even(x: number) {
                                [6]


Error ------------------------------------------------------------------------------------------------------- a.js:47:18

Missing an annotation on `x`. [missing-local-annot]

   47| function missing(x): number {
                        ^


Error -------------------------------------------------------------------------------------------------------- a.js:71:7

Cannot compute a type for `math2` because its definition includes references to itself [1],  [2]. Please add an
annotation to these definitions [3] [4] [5] [recursive-definition]

   a.js:71:7
   71| const math2 = {
             ^^^^^

References:
   a.js:87:12
   87|     return math2.odd(x - 1)
                  ^^^^^ [1]
   a.js:81:12
   81|     return math2.even(x - 1)
                  ^^^^^ [2]
   a.js:75:20
   75|     meth(x: number) { return true }
                           [3]
   a.js:77:17
   77|   odd(x: number) {
                        [4]
   a.js:83:20
   83|   even: (x: number) => {
                           [5]


Error -------------------------------------------------------------------------------------------------------- a.js:91:7

The following definitions recursively depend on each other, and Flow cannot compute their types:
 - `odd_obj` [1] depends on other definition [2]
 - `even_obj` [3] depends on other definition [4]
Please add type annotations to these definitions [5] [6] [7] [definition-cycle]

   a.js:91:7
    91| const odd_obj = {
              ^^^^^^^ [1]

References:
   a.js:97:12
    97|     return even_obj.even(x - 1)
                   ^^^^^^^^ [2]
   a.js:101:7
   101| const even_obj = {
              ^^^^^^^^ [3]
   a.js:106:12
   106|     return odd_obj.odd(x - 1)
                   ^^^^^^^ [4]
   a.js:92:14
    92|   unrelated() { return 42 },
                      [5]
   a.js:93:17
    93|   odd(x: number) {
                         [6]
   a.js:102:22
   102|     even: (x: number) => {
                              [7]


Error ------------------------------------------------------------------------------------------------------- a.js:110:7

Cannot compute a type for `recursiveArrow` because its definition includes references to itself [1]. Please add an
annotation to this definition [2] [recursive-definition]

   a.js:110:7
   110| const recursiveArrow = () => true ? 1 : recursiveArrow();
              ^^^^^^^^^^^^^^

References:
   a.js:110:41
   110| const recursiveArrow = () => true ? 1 : recursiveArrow();
                                                ^^^^^^^^^^^^^^ [1]
   a.js:110:26
   110| const recursiveArrow = () => true ? 1 : recursiveArrow();
                                  [2]


Error ------------------------------------------------------------------------------------------------------ a.js:146:25

Cannot return `Utils.foo` because array literal [1] is incompatible with empty [2]. [incompatible-return]

   a.js:146:25
   146|     h(): empty { return Utils.foo } //err
                                ^^^^^^^^^

References:
   a.js:143:10
   143|     foo: [{x: function(): number { return 42 }}, 42],
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   a.js:146:10
   146|     h(): empty { return Utils.foo } //err
                 ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------- a.js:153:9

Cannot compute a type for `Utils` because its definition includes references to itself [1]. Please add an annotation to
these definitions [2] [3] [recursive-definition]

   a.js:153:9
   153|   const Utils = {
                ^^^^^

References:
   a.js:155:18
   155|     f() { return Utils.foo }
                         ^^^^^ [1]
   a.js:154:25
   154|     foo: [{x: function() { return 42 }}, 42],
                                 [2]
   a.js:155:8
   155|     f() { return Utils.foo }
                [3]


Error ------------------------------------------------------------------------------------------------------- a.js:160:9

The following definitions recursively depend on each other, and Flow cannot compute their types:
 - `m` [1] depends on other definition [2], [3], [4], [5], [6]
 - function [6] depends on other definition [4], [5]
 - `x` [5] depends on other definition [4]
 - `H` [7] depends on other definition [8]
 - `x` [2] depends on other definition [3]
Please add type annotations to these definitions [9] [5] [definition-cycle]

   a.js:160:9
   160|   const m = {
                ^ [1]

References:
   a.js:161:7
   161|     f(x: H) {
              ^ [2]
   a.js:161:10
   161|     f(x: H) {
                 ^ [3]
   a.js:162:14
   162|       return x(x => 42)
                     ^ [4]
   a.js:162:16
   162|       return x(x => 42)
                       ^ [5]
   a.js:162:16
   162|       return x(x => 42)
                       ^^^^^^^ [6]
   a.js:168:8
   168|   type H = { (number => number): void, m: typeof m, s: S }
               ^ [7]
   a.js:168:50
   168|   type H = { (number => number): void, m: typeof m, s: S }
                                                         ^ [8]
   a.js:161:12
   161|     f(x: H) {
                    [9]



Found 10 errors
